@@ -1,3 +1,8 @@
+2011-06-14  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* themes/StyleTab/theme.jl
+	* lisp/sawfish/wm/animation/main.jl
+	* lisp/sawfish/wm/viewport.jl: use 'range widget where appropriate
+
 2011-06-13  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/gtk/widgets/image.jl: improved loading of preview-image
 	-- Lucas Pandolfo
